<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assignment_3_by_makhatbek_iliyas"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />


    <Button
        android:id="@+id/btnExercise1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise_1_creating_a_basic_fragment"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.06"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btnExercise2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise_2_fragment_communication"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.13"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btnExercise3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise_3_fragment_transactions"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.20"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btnExercise4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise_4_building_a_recyclerview"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.27"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btnExercise5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise_5_item_click_handling"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.34"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btnExercise6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise_6_viewholder_pattern"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.41"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btnExercise7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise_7_implementing_viewmodel"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.48"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btnExercise8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise_8_mutablelivedata_for_input_handling"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.55"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btnExercise9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise_9_data_persistence"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.62"
        tools:layout_editor_absoluteX="0dp" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnExercise9">

        <FrameLayout
            android:id="@+id/fragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>